--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <img class="image" src="jow.jpg" alt="">
+    <img class="image" src="swapy.jpg" alt="">
     
     <div class="question">
       <h3>اجب علي سؤال حلقة اليوم</h3>
